<resources>
    <string name="app_name">QuicKorier</string>

    <string name="continuePhoneNumber">Continue with Phone Number</string>
    <string name="login_signup">Login/Signup</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>


    <!--Edit Profile-->
    <string name="editProfileHintUsername">UserName</string>
    <string name="editProfileHintDesignation">Designation</string>
    <string name="editProfileHintDateOfBirth">Date of birth</string>
    <string name="editProfileHintEmail">Email</string>

</resources>
